--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
                 </a>
             </div>
         </div>
+        
+        <div>
+            <div class="content">
+                <img src="assets/hero/Ellipse.svg" alt="">
+                <img src="assets/images/patins-image.png" alt="">
+                <img src="assets/hero/stars-1.svg" alt="">
+                <img src="assets/hero/stars-2.svg" alt="">
+
+            </div>
+        </div>
     </section>
 </body>
 </html>
